--- a/tests/roles.yml
+++ b/tests/roles.yml
@@ -1,4 +1,4 @@
 
 # Install a role from the Ansible Galaxy
-- src: https://github.com/jeqo/ansible-role-nexus
-  name: nexus
+- src: https://github.com/jeqo/ansible-role-jenkins
+  name: jenkins
