fix install task

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -3,6 +3,10 @@
     path: "{{ jenkins_reference_directory }}"
     state: directory
 
+- file:
+    path: "{{ jenkins_reference_directory }}/init.groovy.d"
+    state: directory
+
 - template:
     src: init.groovy.j2
     dest: "{{ jenkins_reference_directory }}/init.groovy.d/tcp-slave-agent-port.groovy"
