--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,21 +1,4 @@
-
-- file:
-    path: "{{ jenkins_reference_directory }}"
-    state: directory
-
-- file:
-    path: "{{ jenkins_reference_directory }}/init.groovy.d"
-    state: directory
-
-- template:
-    src: init.groovy.j2
-    dest: "{{ jenkins_reference_directory }}/init.groovy.d/tcp-slave-agent-port.groovy"
-
-- template:
-    src: jenkins.j2
-    dest: /usr/local/bin/jenkins
-
-- name: download foo.conf
+- name: download jenkins
   get_url:
     url: "{{ jenkins_url }}"
     dest: "{{ jenkins_work}}/jenkins.war"
