--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -12,8 +12,24 @@
 
 - name: configure jenkins command
   template:
-    src: jenkins.j2
+    src: jenkins-command.j2
     dest: /usr/local/bin/jenkins
     owner: "{{ jenkins_user }}"
     group: "{{ jenkins_group }}"
     mode: "u+x"
+
+- name: configure jenkins service
+  template:
+    src: jenkins-service.j2
+    dest: /etc/systemd/system/jenkins.service
+  become: yes
+
+- name: enable service
+  command: systemctl daemon-reload
+  become: yes
+  ignore_errors: yes
+
+- name: enable service
+  command: systemctl enable jenkins.service
+  become: yes
+  ignore_errors: yes
