--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -1,4 +1,6 @@
 Vagrant.configure(2) do |config|
+  config.vm.network "private_network", type: "dhcp"
+
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "test.yml"
     ansible.galaxy_role_file = "roles.yml"
