--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -6,7 +6,11 @@ Vagrant.configure(2) do |config|
     ansible.galaxy_role_file = "roles.yml"
   end
 
-  config.vm.define "test01" do |test01|
-    test01.vm.box = "jeqo/oracle-jdk-8-centos7"
+  config.vm.define "test01" do |node|
+    node.vm.box = "jeqo/oracle-jdk-8-centos7"
+  end
+
+  config.vm.define "test02" do |node|
+    node.vm.box = "jeqo/oracle-jdk-8-ubuntu14"
   end
 end
